ctypes_canapedll/CANapAPI_stripped.h

typedef unsigned long DWORD;
enum TScriptStatus
{
  eTScrReady = 1,      
  eTScrStarting,       
  eTScrRunning,        
  eTScrSleeping,       
  eTScrSuspended,      
  eTScrTerminated,     
  eTScrFinishedReturn, 
  eTScrFinishedCancel, 
  eTScrFailure,        
  eTScrTimeout,        
  eTScrDelayedCompiling, 
                         
  eTScrException       
};
enum TFormat
{
  ECU_INTERNAL = 0,                 
  PHYSICAL_REPRESENTATION = 1,      
};
enum TObjectType 
{
  OTT_MEASURE   = 0, 
  OTT_CALIBRATE = 1, 
  OTT_UNKNOWN   = 2  
};
struct SecProfileEntry         
{
  unsigned int mId;            
  char mName[MAX_PATH];        
  char mDescription[MAX_PATH]; 
};
struct TConverterInfo
{ 
  char Comment[_MAX_PATH];  
  char Name   [_MAX_PATH];  
  char ID     [_MAX_PATH];  
};
 
typedef enum  {
  TYPE_FILE,         
  TYPE_VIRTUAL,      
  TYPE_PHYSICAL      
} TAsap3FileType;
typedef enum {
  TYPE_UNKNOWN, 
  TYPE_INT,     
  TYPE_FLOAT,   
  TYPE_DOUBLE,  
  TYPE_SIGNED,  
  TYPE_UNSIGNED,
  TYPE_STRING   
}TAsap3DataType;
struct tAsap3Hdl;
typedef struct tAsap3Hdl *TAsap3Hdl;
typedef unsigned short TModulHdl;
typedef unsigned long  TScriptHdl;
typedef unsigned long TTime;
 
struct tSampleBlockObject
{
 int has_buffer_Overrun;      
 long has_Error;               
 int initialized;             
 long countofValidEntries;     
 long countofInitilizedEntries;
 struct tSampleObject **tSample;      
};
extern bool ASAP3_EXPORT CALL_CONV Asap3CheckOverrun(TAsap3Hdl hdl, TModulHdl module, unsigned short taskId, bool resetOverrun);
extern bool ASAP3_EXPORT CALL_CONV Asap3GetNextSample(TAsap3Hdl hdl,
                   TModulHdl module,       
                   unsigned short taskId,  
                   TTime * timeStamp,       
                   double ** values);
       
                                           
                                           
extern bool ASAP3_EXPORT CALL_CONV Asap3GetCurrentValues(TAsap3Hdl hdl,
                                TModulHdl _module,      
                                unsigned short taskId, 
                                TTime * timeStamp,      
                                double * values,        
                                                        
                                                        
                                                        
                                unsigned short maxValues);
  
bool ASAP3_EXPORT CALL_CONV Asap3GetNextSampleBlock(TAsap3Hdl hdl,
                                TModulHdl _module,                   
                                unsigned short taskId,              
                                long count_of_Samples ,              
                                struct tSampleBlockObject ** values);
       
extern bool ASAP3_EXPORT CALL_CONV Asap3UseNAN(TAsap3Hdl hdl,bool use);
extern bool ASAP3_EXPORT CALL_CONV Asap3IsNANUsed(TAsap3Hdl hdl,bool *use);
extern bool ASAP3_EXPORT CALL_CONV Asap3SetMdfFilename(TAsap3Hdl hdl, const char *mdfFilename);
extern bool ASAP3_EXPORT CALL_CONV Asap3GetMdfFilename(TAsap3Hdl hdl, char ** mdfFilename);
extern bool ASAP3_EXPORT CALL_CONV Asap3MatlabConversion(TAsap3Hdl hdl, const char *mdfFilename, const char *matlabFilename);
extern bool ASAP3_EXPORT CALL_CONV Asap3MatlabConversionAsync(TAsap3Hdl hdl, const char *mdfFilename, const char *matlabFilename);
extern bool ASAP3_EXPORT CALL_CONV Asap3MDFConverterCount(TAsap3Hdl hdl,int *count);
extern bool ASAP3_EXPORT CALL_CONV Asap3MDFConvert(TAsap3Hdl hdl,char *converterID ,const char *mdfFilename,const char *destFilename,bool overwrite);
extern bool ASAP3_EXPORT CALL_CONV Asap3MDFConverterInfo(TAsap3Hdl hdl,int index,struct TConverterInfo* item);
extern bool ASAP3_EXPORT CALL_CONV Asap3GetNetworkName(TAsap3Hdl hdl,TModulHdl module,char *Name, unsigned int * sizeofName);
extern bool ASAP3_EXPORT CALL_CONV Asap3GetNetworkDevices(TAsap3Hdl hdl,char *Name, TModulHdl * ModuleArray,unsigned int *count);
extern bool ASAP3_EXPORT CALL_CONV Asap3ActivateNetwork(TAsap3Hdl hdl,char *Name, bool activate);
extern bool ASAP3_EXPORT CALL_CONV Asap3IsNetworkActivated(TAsap3Hdl hdl,char *Name, bool *activated);
extern bool ASAP3_EXPORT CALL_CONV Asap3GetSecProfileCount(TAsap3Hdl hdl, unsigned int* count);
extern bool ASAP3_EXPORT CALL_CONV Asap3GetSecProfileIdentifier(TAsap3Hdl hdl, char* identifiers, DWORD* sizeofBuffer);
extern bool ASAP3_EXPORT CALL_CONV Asap3GetSecProfileInfo(TAsap3Hdl hdl, unsigned int id,struct SecProfileEntry* entry);
extern bool ASAP3_EXPORT CALL_CONV Asap3AddSecProfileToNetwork(TAsap3Hdl hdl, unsigned int profileId, char* networkName);
extern bool ASAP3_EXPORT CALL_CONV Asap3_CCP_Request(TAsap3Hdl hdl,
                         TModulHdl module,
                         const unsigned char *requestData,
                         unsigned long  requestSize,
                         unsigned long  responseTimeout,      
                         unsigned char * responseData,
                         unsigned long  maxResponseSize,
                         unsigned long * responseSize);
extern bool ASAP3_EXPORT CALL_CONV Asap3ExecuteScript(TAsap3Hdl hdl,
                                                      TModulHdl module,
                                                      bool scriptFile,
                                                      const char * script);
extern bool ASAP3_EXPORT CALL_CONV Asap3SelectObjects(TAsap3Hdl hdl, TModulHdl module,
                                       enum TObjectType type, const char *fname);
extern bool ASAP3_EXPORT CALL_CONV Asap3RestoreWndSize(TAsap3Hdl hdl);
extern bool ASAP3_EXPORT CALL_CONV Asap3RestoreWndSize2(TAsap3Hdl hdl, long params);
extern bool ASAP3_EXPORT CALL_CONV Asap3CopyBinaryFile(TAsap3Hdl hdl, TModulHdl module, TAsap3FileType sourcetype, TAsap3FileType desttype, const char *filename);
extern bool ASAP3_EXPORT CALL_CONV Asap3ReadObjectParameter(TAsap3Hdl hdl, TModulHdl module, const char *objectName, enum TFormat format, TAsap3DataType * type, unsigned long * address, double * min, double * max, double * increment);
extern bool ASAP3_EXPORT CALL_CONV Asap3ExecuteScriptEx(TAsap3Hdl hdl,
                                                      TModulHdl module,
                                                      bool scriptFile,
                                                      const char * script,
                                                      TScriptHdl *hScript);
extern bool ASAP3_EXPORT CALL_CONV Asap3GetScriptState (TAsap3Hdl hdl,TScriptHdl hScript,enum TScriptStatus *scrstate,char *textBuffer,DWORD *sizeofbuffer);
extern bool ASAP3_EXPORT CALL_CONV Asap3StopScript     (TAsap3Hdl hdl,TScriptHdl hScript) ;
extern bool ASAP3_EXPORT CALL_CONV Asap3GetScriptResultValue(TAsap3Hdl hdl,TScriptHdl hScript,double *Value);