ctypes_canapedll/CANapAPI.py


# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 875
if _libs["CANapAPI64.dll"].has("Asap3CheckOverrun", "stdcall"):
    Asap3CheckOverrun = _libs["CANapAPI64.dll"].get("Asap3CheckOverrun", "stdcall")
    Asap3CheckOverrun.argtypes = [TAsap3Hdl, TModulHdl, c_ushort, c_bool]
    Asap3CheckOverrun.restype = c_bool

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 876
if _libs["CANapAPI64.dll"].has("Asap3GetNextSample", "stdcall"):
    Asap3GetNextSample = _libs["CANapAPI64.dll"].get("Asap3GetNextSample", "stdcall")
    Asap3GetNextSample.argtypes = [TAsap3Hdl, TModulHdl, c_ushort, POINTER(TTime), POINTER(POINTER(c_double))]
    Asap3GetNextSample.restype = c_bool

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 883
if _libs["CANapAPI64.dll"].has("Asap3GetCurrentValues", "stdcall"):
    Asap3GetCurrentValues = _libs["CANapAPI64.dll"].get("Asap3GetCurrentValues", "stdcall")
    Asap3GetCurrentValues.argtypes = [TAsap3Hdl, TModulHdl, c_ushort, POINTER(TTime), POINTER(c_double), c_ushort]
    Asap3GetCurrentValues.restype = c_bool

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 892
if _libs["CANapAPI64.dll"].has("Asap3GetNextSampleBlock", "stdcall"):
    Asap3GetNextSampleBlock = _libs["CANapAPI64.dll"].get("Asap3GetNextSampleBlock", "stdcall")
    Asap3GetNextSampleBlock.argtypes = [TAsap3Hdl, TModulHdl, c_ushort, c_long, POINTER(POINTER(struct_tSampleBlockObject))]
    Asap3GetNextSampleBlock.restype = c_bool

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 897
if _libs["CANapAPI64.dll"].has("Asap3UseNAN", "stdcall"):
    Asap3UseNAN = _libs["CANapAPI64.dll"].get("Asap3UseNAN", "stdcall")
    Asap3UseNAN.argtypes = [TAsap3Hdl, c_bool]
    Asap3UseNAN.restype = c_bool

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 898
if _libs["CANapAPI64.dll"].has("Asap3IsNANUsed", "stdcall"):
    Asap3IsNANUsed = _libs["CANapAPI64.dll"].get("Asap3IsNANUsed", "stdcall")
    Asap3IsNANUsed.argtypes = [TAsap3Hdl, POINTER(c_bool)]
    Asap3IsNANUsed.restype = c_bool

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 899
if _libs["CANapAPI64.dll"].has("Asap3SetMdfFilename", "stdcall"):
    Asap3SetMdfFilename = _libs["CANapAPI64.dll"].get("Asap3SetMdfFilename", "stdcall")
    Asap3SetMdfFilename.argtypes = [TAsap3Hdl, String]
    Asap3SetMdfFilename.restype = c_bool

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 900
if _libs["CANapAPI64.dll"].has("Asap3GetMdfFilename", "stdcall"):
    Asap3GetMdfFilename = _libs["CANapAPI64.dll"].get("Asap3GetMdfFilename", "stdcall")
    Asap3GetMdfFilename.argtypes = [TAsap3Hdl, POINTER(POINTER(c_char))]
    Asap3GetMdfFilename.restype = c_bool

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 902
if _libs["CANapAPI64.dll"].has("Asap3MatlabConversion", "stdcall"):
    Asap3MatlabConversion = _libs["CANapAPI64.dll"].get("Asap3MatlabConversion", "stdcall")
    Asap3MatlabConversion.argtypes = [TAsap3Hdl, String, String]
    Asap3MatlabConversion.restype = c_bool

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 903
if _libs["CANapAPI64.dll"].has("Asap3MatlabConversionAsync", "stdcall"):
    Asap3MatlabConversionAsync = _libs["CANapAPI64.dll"].get("Asap3MatlabConversionAsync", "stdcall")
    Asap3MatlabConversionAsync.argtypes = [TAsap3Hdl, String, String]
    Asap3MatlabConversionAsync.restype = c_bool

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 904
if _libs["CANapAPI64.dll"].has("Asap3MDFConverterCount", "stdcall"):
    Asap3MDFConverterCount = _libs["CANapAPI64.dll"].get("Asap3MDFConverterCount", "stdcall")
    Asap3MDFConverterCount.argtypes = [TAsap3Hdl, POINTER(c_int)]
    Asap3MDFConverterCount.restype = c_bool

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 905
if _libs["CANapAPI64.dll"].has("Asap3MDFConvert", "stdcall"):
    Asap3MDFConvert = _libs["CANapAPI64.dll"].get("Asap3MDFConvert", "stdcall")
    Asap3MDFConvert.argtypes = [TAsap3Hdl, String, String, String, c_bool]
    Asap3MDFConvert.restype = c_bool

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 906
if _libs["CANapAPI64.dll"].has("Asap3MDFConverterInfo", "stdcall"):
    Asap3MDFConverterInfo = _libs["CANapAPI64.dll"].get("Asap3MDFConverterInfo", "stdcall")
    Asap3MDFConverterInfo.argtypes = [TAsap3Hdl, c_int, POINTER(struct_TConverterInfo)]
    Asap3MDFConverterInfo.restype = c_bool

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 907
if _libs["CANapAPI64.dll"].has("Asap3GetNetworkName", "stdcall"):
    Asap3GetNetworkName = _libs["CANapAPI64.dll"].get("Asap3GetNetworkName", "stdcall")
    Asap3GetNetworkName.argtypes = [TAsap3Hdl, TModulHdl, String, POINTER(c_uint)]
    Asap3GetNetworkName.restype = c_bool

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 908
if _libs["CANapAPI64.dll"].has("Asap3GetNetworkDevices", "stdcall"):
    Asap3GetNetworkDevices = _libs["CANapAPI64.dll"].get("Asap3GetNetworkDevices", "stdcall")
    Asap3GetNetworkDevices.argtypes = [TAsap3Hdl, String, POINTER(TModulHdl), POINTER(c_uint)]
    Asap3GetNetworkDevices.restype = c_bool

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 909
if _libs["CANapAPI64.dll"].has("Asap3ActivateNetwork", "stdcall"):
    Asap3ActivateNetwork = _libs["CANapAPI64.dll"].get("Asap3ActivateNetwork", "stdcall")
    Asap3ActivateNetwork.argtypes = [TAsap3Hdl, String, c_bool]
    Asap3ActivateNetwork.restype = c_bool

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 910
if _libs["CANapAPI64.dll"].has("Asap3IsNetworkActivated", "stdcall"):
    Asap3IsNetworkActivated = _libs["CANapAPI64.dll"].get("Asap3IsNetworkActivated", "stdcall")
    Asap3IsNetworkActivated.argtypes = [TAsap3Hdl, String, POINTER(c_bool)]
    Asap3IsNetworkActivated.restype = c_bool

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 911
if _libs["CANapAPI64.dll"].has("Asap3GetSecProfileCount", "stdcall"):
    Asap3GetSecProfileCount = _libs["CANapAPI64.dll"].get("Asap3GetSecProfileCount", "stdcall")
    Asap3GetSecProfileCount.argtypes = [TAsap3Hdl, POINTER(c_uint)]
    Asap3GetSecProfileCount.restype = c_bool

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 912
if _libs["CANapAPI64.dll"].has("Asap3GetSecProfileIdentifier", "stdcall"):
    Asap3GetSecProfileIdentifier = _libs["CANapAPI64.dll"].get("Asap3GetSecProfileIdentifier", "stdcall")
    Asap3GetSecProfileIdentifier.argtypes = [TAsap3Hdl, String, POINTER(DWORD)]
    Asap3GetSecProfileIdentifier.restype = c_bool

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 913
if _libs["CANapAPI64.dll"].has("Asap3GetSecProfileInfo", "stdcall"):
    Asap3GetSecProfileInfo = _libs["CANapAPI64.dll"].get("Asap3GetSecProfileInfo", "stdcall")
    Asap3GetSecProfileInfo.argtypes = [TAsap3Hdl, c_uint, POINTER(struct_SecProfileEntry)]
    Asap3GetSecProfileInfo.restype = c_bool

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 914
if _libs["CANapAPI64.dll"].has("Asap3AddSecProfileToNetwork", "stdcall"):
    Asap3AddSecProfileToNetwork = _libs["CANapAPI64.dll"].get("Asap3AddSecProfileToNetwork", "stdcall")
    Asap3AddSecProfileToNetwork.argtypes = [TAsap3Hdl, c_uint, String]
    Asap3AddSecProfileToNetwork.restype = c_bool

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 915
if _libs["CANapAPI64.dll"].has("Asap3_CCP_Request", "stdcall"):
    Asap3_CCP_Request = _libs["CANapAPI64.dll"].get("Asap3_CCP_Request", "stdcall")
    Asap3_CCP_Request.argtypes = [TAsap3Hdl, TModulHdl, POINTER(c_ubyte), c_ulong, c_ulong, POINTER(c_ubyte), c_ulong, POINTER(c_ulong)]
    Asap3_CCP_Request.restype = c_bool

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 923
if _libs["CANapAPI64.dll"].has("Asap3ExecuteScript", "stdcall"):
    Asap3ExecuteScript = _libs["CANapAPI64.dll"].get("Asap3ExecuteScript", "stdcall")
    Asap3ExecuteScript.argtypes = [TAsap3Hdl, TModulHdl, c_bool, String]
    Asap3ExecuteScript.restype = c_bool

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 927
if _libs["CANapAPI64.dll"].has("Asap3SelectObjects", "stdcall"):
    Asap3SelectObjects = _libs["CANapAPI64.dll"].get("Asap3SelectObjects", "stdcall")
    Asap3SelectObjects.argtypes = [TAsap3Hdl, TModulHdl, enum_TObjectType, String]
    Asap3SelectObjects.restype = c_bool

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 929
if _libs["CANapAPI64.dll"].has("Asap3RestoreWndSize", "stdcall"):
    Asap3RestoreWndSize = _libs["CANapAPI64.dll"].get("Asap3RestoreWndSize", "stdcall")
    Asap3RestoreWndSize.argtypes = [TAsap3Hdl]
    Asap3RestoreWndSize.restype = c_bool

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 930
if _libs["CANapAPI64.dll"].has("Asap3RestoreWndSize2", "stdcall"):
    Asap3RestoreWndSize2 = _libs["CANapAPI64.dll"].get("Asap3RestoreWndSize2", "stdcall")
    Asap3RestoreWndSize2.argtypes = [TAsap3Hdl, c_long]
    Asap3RestoreWndSize2.restype = c_bool

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 931
if _libs["CANapAPI64.dll"].has("Asap3CopyBinaryFile", "stdcall"):
    Asap3CopyBinaryFile = _libs["CANapAPI64.dll"].get("Asap3CopyBinaryFile", "stdcall")
    Asap3CopyBinaryFile.argtypes = [TAsap3Hdl, TModulHdl, TAsap3FileType, TAsap3FileType, String]
    Asap3CopyBinaryFile.restype = c_bool

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 932
if _libs["CANapAPI64.dll"].has("Asap3ReadObjectParameter", "stdcall"):
    Asap3ReadObjectParameter = _libs["CANapAPI64.dll"].get("Asap3ReadObjectParameter", "stdcall")
    Asap3ReadObjectParameter.argtypes = [TAsap3Hdl, TModulHdl, String, enum_TFormat, POINTER(TAsap3DataType), POINTER(c_ulong), POINTER(c_double), POINTER(c_double), POINTER(c_double)]
    Asap3ReadObjectParameter.restype = c_bool

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 933
if _libs["CANapAPI64.dll"].has("Asap3ExecuteScriptEx", "stdcall"):
    Asap3ExecuteScriptEx = _libs["CANapAPI64.dll"].get("Asap3ExecuteScriptEx", "stdcall")
    Asap3ExecuteScriptEx.argtypes = [TAsap3Hdl, TModulHdl, c_bool, String, POINTER(TScriptHdl)]
    Asap3ExecuteScriptEx.restype = c_bool

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 938
if _libs["CANapAPI64.dll"].has("Asap3GetScriptState", "stdcall"):
    Asap3GetScriptState = _libs["CANapAPI64.dll"].get("Asap3GetScriptState", "stdcall")
    Asap3GetScriptState.argtypes = [TAsap3Hdl, TScriptHdl, POINTER(enum_TScriptStatus), String, POINTER(DWORD)]
    Asap3GetScriptState.restype = c_bool

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 939
if _libs["CANapAPI64.dll"].has("Asap3StopScript", "stdcall"):
    Asap3StopScript = _libs["CANapAPI64.dll"].get("Asap3StopScript", "stdcall")
    Asap3StopScript.argtypes = [TAsap3Hdl, TScriptHdl]
    Asap3StopScript.restype = c_bool

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 941
if _libs["CANapAPI64.dll"].has("Asap3GetScriptResultValue", "stdcall"):
    Asap3GetScriptResultValue = _libs["CANapAPI64.dll"].get("Asap3GetScriptResultValue", "stdcall")
    Asap3GetScriptResultValue.argtypes = [TAsap3Hdl, TScriptHdl, POINTER(c_double)]
    Asap3GetScriptResultValue.restype = c_bool
